cmd/pk2go/y.output

state 0
	$accept: .list $end 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 67)

	list  goto 1
	expr  goto 7
	stmt  goto 3
	stmts  goto 2
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 1
	$accept:  list.$end 

	$end  accept
	.  error


state 2
	list:  stmts.    (1)

	.  reduce 1 (src line 62)


state 3
	stmts:  stmt.stmts 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 67)

	expr  goto 7
	stmt  goto 3
	stmts  goto 57
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 4
	stmt:  ';'.    (6)

	.  reduce 6 (src line 90)


5: shift/reduce conflict (shift 58(0), red'n 7(0)) on ';'
state 5
	stmt:  nosemi.    (7)
	stmt:  nosemi.';' 

	';'  shift 58
	.  reduce 7 (src line 102)


state 6
	nosemi:  stmtnv.    (9)

	.  reduce 9 (src line 105)


7: shift/reduce conflict (shift 79(0), red'n 10(0)) on SYM_IN
7: shift/reduce conflict (shift 87(1), red'n 10(0)) on PLUSEQ
7: shift/reduce conflict (shift 88(1), red'n 10(0)) on MINUSEQ
7: shift/reduce conflict (shift 89(1), red'n 10(0)) on MULEQ
7: shift/reduce conflict (shift 90(1), red'n 10(0)) on DIVEQ
7: shift/reduce conflict (shift 92(1), red'n 10(0)) on AMPEQ
7: shift/reduce conflict (shift 83(15), red'n 10(0)) on INC
7: shift/reduce conflict (shift 84(15), red'n 10(0)) on DEC
7: shift/reduce conflict (shift 91(1), red'n 10(0)) on OREQ
7: shift/reduce conflict (shift 93(1), red'n 10(0)) on XOREQ
7: shift/reduce conflict (shift 94(1), red'n 10(0)) on RSHIFTEQ
7: shift/reduce conflict (shift 95(1), red'n 10(0)) on LSHIFTEQ
7: shift/reduce conflict (shift 96(1), red'n 10(0)) on '='
7: shift/reduce conflict (shift 61(2), red'n 10(0)) on '?'
7: shift/reduce conflict (shift 81(4), red'n 10(0)) on OR
7: shift/reduce conflict (shift 80(5), red'n 10(0)) on AND
7: shift/reduce conflict (shift 67(6), red'n 10(0)) on '|'
7: shift/reduce conflict (shift 69(7), red'n 10(0)) on '^'
7: shift/reduce conflict (shift 68(8), red'n 10(0)) on '&'
7: shift/reduce conflict (shift 72(9), red'n 10(0)) on GT
7: shift/reduce conflict (shift 74(9), red'n 10(0)) on GE
7: shift/reduce conflict (shift 73(9), red'n 10(0)) on LT
7: shift/reduce conflict (shift 75(9), red'n 10(0)) on LE
7: shift/reduce conflict (shift 76(9), red'n 10(0)) on EQ
7: shift/reduce conflict (shift 78(9), red'n 10(0)) on NE
7: shift/reduce conflict (shift 77(9), red'n 10(0)) on REGEXEQ
7: shift/reduce conflict (shift 70(10), red'n 10(0)) on LSHIFT
7: shift/reduce conflict (shift 71(10), red'n 10(0)) on RSHIFT
7: shift/reduce conflict (shift 63(11), red'n 10(0)) on '+'
7: shift/reduce conflict (shift 64(11), red'n 10(0)) on '-'
7: shift/reduce conflict (shift 65(12), red'n 10(0)) on '*'
7: shift/reduce conflict (shift 66(12), red'n 10(0)) on '/'
7: shift/reduce conflict (shift 62(14), red'n 10(0)) on '%'
7: shift/reduce conflict (shift 85(14), red'n 10(0)) on '.'
7: shift/reduce conflict (shift 86(0), red'n 10(0)) on '('
7: shift/reduce conflict (shift 60(0), red'n 10(0)) on '{'
7: shift/reduce conflict (shift 59(0), red'n 10(0)) on '['
state 7
	nosemi:  expr.    (10)
	expr:  expr.'[' expr ']' 
	expr:  expr.'{' expr '}' 
	expr:  expr.'?' expr ':' expr 
	expr:  expr.'%' expr 
	expr:  expr.'+' expr 
	expr:  expr.'-' expr 
	expr:  expr.'*' expr 
	expr:  expr.'/' expr 
	expr:  expr.'|' expr 
	expr:  expr.'&' expr 
	expr:  expr.'^' expr 
	expr:  expr.LSHIFT expr 
	expr:  expr.RSHIFT expr 
	expr:  expr.GT expr 
	expr:  expr.LT expr 
	expr:  expr.GE expr 
	expr:  expr.LE expr 
	expr:  expr.EQ expr 
	expr:  expr.REGEXEQ expr 
	expr:  expr.NE expr 
	expr:  expr.SYM_IN expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.equals expr 
	expr:  expr.INC 
	expr:  expr.DEC 
	expr:  expr.'.' dottype 
	expr:  expr.'.' method 
	expr:  expr.'.' method '(' arglist ')' 
	expr:  expr.'(' arglist ')' 

	SYM_IN  shift 79
	PLUSEQ  shift 87
	MINUSEQ  shift 88
	MULEQ  shift 89
	DIVEQ  shift 90
	AMPEQ  shift 92
	INC  shift 83
	DEC  shift 84
	OREQ  shift 91
	XOREQ  shift 93
	RSHIFTEQ  shift 94
	LSHIFTEQ  shift 95
	'='  shift 96
	'?'  shift 61
	OR  shift 81
	AND  shift 80
	'|'  shift 67
	'^'  shift 69
	'&'  shift 68
	GT  shift 72
	GE  shift 74
	LT  shift 73
	LE  shift 75
	EQ  shift 76
	NE  shift 78
	REGEXEQ  shift 77
	LSHIFT  shift 70
	RSHIFT  shift 71
	'+'  shift 63
	'-'  shift 64
	'*'  shift 65
	'/'  shift 66
	'%'  shift 62
	'.'  shift 85
	'('  shift 86
	'{'  shift 60
	'['  shift 59
	.  reduce 10 (src line 106)

	equals  goto 82

8: shift/reduce conflict (shift 97(0), red'n 11(0)) on '('
state 8
	stmtnv:  RETURN.    (11)
	stmtnv:  RETURN.'(' ')' 
	stmtnv:  RETURN.'(' expr ')' 

	'('  shift 97
	.  reduce 11 (src line 107)


state 9
	stmtnv:  BREAK.    (14)

	.  reduce 14 (src line 125)


state 10
	stmtnv:  CONTINUE.    (15)

	.  reduce 15 (src line 131)


state 11
	stmtnv:  GLOBALDEC.globlist 
	expr:  GLOBALDEC.'(' globvar ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 99
	.  error

	var  goto 101
	globvar  goto 100
	globlist  goto 98

state 12
	expr:  '{'.stmts '}' 
	stmts: .    (2)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	BREAK  shift 9
	CONTINUE  shift 10
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	RETURN  shift 8
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 11
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	';'  shift 4
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 2 (src line 67)

	expr  goto 7
	stmt  goto 3
	stmts  goto 103
	nosemi  goto 5
	stmtnv  goto 6
	var  goto 26

state 13
	expr:  SYM_DELETE.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 104
	var  goto 26

state 14
	expr:  READONLY.var 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	.  error

	var  goto 106

state 15
	expr:  ONCHANGE.'(' var ',' expr ')' 

	'('  shift 107
	.  error


state 16
	expr:  WHILE.'(' expr ')' stmt 

	'('  shift 108
	.  error


state 17
	expr:  FOR.'(' optstmt ';' optrelx ';' optstmt ')' stmt 
	expr:  FOR.'(' var SYM_IN expr ')' stmt 

	'('  shift 109
	.  error


state 18
	expr:  IF.'(' expr ')' stmt 
	expr:  IF.'(' expr ')' stmt ELSE stmt 

	'('  shift 110
	.  error


state 19
	expr:  KW_NEW.var '(' narglist ')' 
	expr:  KW_NEW.'(' expr ')' var '(' narglist ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 112
	.  error

	var  goto 111

state 20
	expr:  UNDEFINE.var 
	expr:  UNDEFINE.'(' var ')' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 114
	.  error

	var  goto 113

state 21
	expr:  '['.arrlist ']' 
	arrlist: .    (147)

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  reduce 147 (src line 749)

	expr  goto 117
	var  goto 26
	arritem  goto 116
	arrlist  goto 115

state 22
	expr:  INTEGER.    (31)

	.  reduce 31 (src line 228)


23: shift/reduce conflict (shift 120(0), red'n 32(0)) on DUR
23: shift/reduce conflict (shift 119(0), red'n 32(0)) on VOL
23: shift/reduce conflict (shift 123(0), red'n 32(0)) on TIME
23: shift/reduce conflict (shift 121(0), red'n 32(0)) on CHAN
23: shift/reduce conflict (shift 124(0), red'n 32(0)) on PITCH
23: shift/reduce conflict (shift 125(0), red'n 32(0)) on LENGTH
23: shift/reduce conflict (shift 129(0), red'n 32(0)) on NUMBER
23: shift/reduce conflict (shift 126(0), red'n 32(0)) on TYPE
23: shift/reduce conflict (shift 127(0), red'n 32(0)) on ATTRIB
23: shift/reduce conflict (shift 128(0), red'n 32(0)) on FLAGS
23: shift/reduce conflict (shift 122(0), red'n 32(0)) on PORT
state 23
	expr:  DOUBLE.    (32)
	expr:  DOUBLE.dottype 

	DUR  shift 120
	VOL  shift 119
	TIME  shift 123
	CHAN  shift 121
	PITCH  shift 124
	LENGTH  shift 125
	NUMBER  shift 129
	TYPE  shift 126
	ATTRIB  shift 127
	FLAGS  shift 128
	PORT  shift 122
	.  reduce 32 (src line 229)

	dottype  goto 118

state 24
	expr:  STRING.    (33)

	.  reduce 33 (src line 230)


state 25
	expr:  PHRASE.    (34)

	.  reduce 34 (src line 231)


26: shift/reduce conflict (shift 130(0), red'n 35(0)) on '('
state 26
	expr:  var.    (35)
	expr:  var.'(' arglist ')' 

	'('  shift 130
	.  reduce 35 (src line 232)


state 27
	expr:  QMARK2.    (36)

	.  reduce 36 (src line 233)


state 28
	expr:  '('.expr ')' 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 131
	var  goto 26

state 29
	expr:  DEFINED.'(' var ')' 
	expr:  DEFINED.'(' '$' ')' 
	expr:  DEFINED.'(' DOLLAR2 ')' 
	expr:  DEFINED.'(' expr '.' method ')' 
	expr:  DEFINED.var 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'('  shift 132
	.  error

	var  goto 133

state 30
	expr:  '-'.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 134
	var  goto 26

state 31
	expr:  '~'.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 135
	var  goto 26

state 32
	expr:  BANG.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 136
	var  goto 26

state 33
	expr:  INC.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 137
	var  goto 26

state 34
	expr:  DEC.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 138
	var  goto 26

state 35
	expr:  EVAL.expr 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 139
	var  goto 26

state 36
	expr:  '$'.    (76)

	.  reduce 76 (src line 468)


state 37
	expr:  DOLLAR2.    (77)

	.  reduce 77 (src line 474)


state 38
	expr:  OBJECT.    (78)

	.  reduce 78 (src line 475)


state 39
	expr:  TASK.var '(' arglist ')' 
	expr:  TASK.expr '(' arglist ')' 
	expr:  TASK.expr '.' method '(' arglist ')' 

	QMARK2  shift 27
	DOLLAR2  shift 37
	WHILE  shift 16
	IF  shift 18
	FOR  shift 17
	EVAL  shift 35
	TASK  shift 39
	SYM_DELETE  shift 13
	UNDEFINE  shift 20
	FUNC  shift 43
	DEFINED  shift 29
	READONLY  shift 14
	ONCHANGE  shift 15
	GLOBALDEC  shift 105
	CLASS  shift 44
	KW_NEW  shift 19
	NARGS  shift 40
	TYPEOF  shift 41
	XY  shift 42
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	PHRASE  shift 25
	STRING  shift 24
	NAME  shift 45
	INTEGER  shift 22
	OBJECT  shift 38
	DOUBLE  shift 23
	INC  shift 33
	DEC  shift 34
	'$'  shift 36
	'-'  shift 30
	BANG  shift 32
	'~'  shift 31
	'('  shift 28
	'{'  shift 12
	'['  shift 21
	.  error

	expr  goto 141
	var  goto 140

state 40
	expr:  NARGS.'(' ')' 

	'('  shift 142
	.  error


state 41
	expr:  TYPEOF.'(' expr ')' 

	'('  shift 143
	.  error


state 42
	expr:  XY.'(' expr ',' expr ')' 
	expr:  XY.'(' expr ',' expr ',' expr ',' expr ')' 

	'('  shift 144
	.  error


state 43
	expr:  FUNC.'(' expr ')' 
	expr:  FUNC.var '(' prmlist ')' '{' stmts '}' 
	expr:  FUNC.var '{' stmts '}' 
	expr:  FUNC.uniqvar '(' prmlist ')' '{' stmts '}' 
	expr:  FUNC.uniqvar '{' stmts '}' 

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	'?'  shift 148
	'('  shift 145
	.  error

	uniqvar  goto 147
	var  goto 146

44: shift/reduce conflict (shift 102(0), red'n 165(0)) on CLASS
44: shift/reduce conflict (shift 47(0), red'n 165(0)) on DUR
44: shift/reduce conflict (shift 46(0), red'n 165(0)) on VOL
44: shift/reduce conflict (shift 50(0), red'n 165(0)) on TIME
44: shift/reduce conflict (shift 48(0), red'n 165(0)) on CHAN
44: shift/reduce conflict (shift 51(0), red'n 165(0)) on PITCH
44: shift/reduce conflict (shift 52(0), red'n 165(0)) on LENGTH
44: shift/reduce conflict (shift 56(0), red'n 165(0)) on NUMBER
44: shift/reduce conflict (shift 53(0), red'n 165(0)) on TYPE
44: shift/reduce conflict (shift 54(0), red'n 165(0)) on ATTRIB
44: shift/reduce conflict (shift 55(0), red'n 165(0)) on FLAGS
44: shift/reduce conflict (shift 49(0), red'n 165(0)) on PORT
44: shift/reduce conflict (shift 45(0), red'n 165(0)) on NAME
state 44
	expr:  CLASS.var '{' methdefs '}' 
	var:  CLASS.    (165)

	CLASS  shift 102
	DUR  shift 47
	VOL  shift 46
	TIME  shift 50
	CHAN  shift 48
	PITCH  shift 51
	LENGTH  shift 52
	NUMBER  shift 56
	TYPE  shift 53
	ATTRIB  shift 54
	FLAGS  shift 55
	PORT  shift 49
	NAME  shift 45
	.  reduce 165 (src line 775)

	var  goto 149

state 45
	var:  NAME.    (153)

	.  reduce 153 (src line 763)


state 46
	var:  VOL.    (154)

	.  reduce 154 (src line 764)


state 47
	var:  DUR.    (155)

	.  reduce 155 (src line 765)


state 48
	var:  CHAN.    (156)

	.  reduce 156 (src line 766)


state 49
	var:  PORT.    (157)

	.  reduce 157 (src line 767)


state 50
	var:  TIME.    (158)

	.  reduce 158 (src line 768)


state 51
	var:  PITCH.    (159)

	.  reduce 159 (src line 769)


state 52
	var:  LENGTH.    (160)

	.  reduce 160 (src line 770)


state 53
	var:  TYPE.    (161)

	.  reduce 161 (src line 771)


state 54
	var:  ATTRIB.    (162)

	.  reduce 162 (src line 772)


state 55
	var:  FLAGS.    (163)

	.  reduce 163 (src line 773)


state 56
	var:  NUMBER.    (164)

	.  reduce 164 (src line 774)


state 57
	stmts:  stmt stmts.    (3)

	.  reduce 3 (src line 70)


state 58
	stmt:  nosemi ';'.    (8)

	.  reduce 8 (src line 103)


state 59
	expr:  expr '['.expr ']' 
